# HarmonyKMP

./: .gitignore  README-en.md  README-zh_CN.md  README.md  gradle.properties  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/com/example/cmp_hello/: MainActivity.kt  Platform.android.kt  PlatformImageLoader.android.kt
composeApp/src/androidMain/kotlin/com/example/mycompose/: MainActivity.kt
composeApp/src/commonMain/kotlin/com/example/cmp_hello/: App.kt  Greeting.kt  Platform.kt  PlatformImageLoader.kt
docs/: 01-环境搭建与基础架构介绍.md  02-当前使用的三方库与版本号.md  03-KMP与ArkTS视图互嵌.md  04-KMP与ArkTS双向调用.md  05-所有测试用例步骤说明.md  06-OHOS-Navigation-SavedStateHandle回传验证.md  07-鸿蒙与iOS运行问题排查.md
gradle/: libs.versions.toml
harmonyApp/: build-profile.json5
harmonyApp/AppScope/: app.json5
harmonyApp/entry/: build-profile.json5  oh-package.json5
harmonyApp/entry/libs/: compose.har
harmonyApp/entry/src/main/: module.json5
harmonyApp/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
harmonyApp/entry/src/main/cpp/include/: libkn_api.h
harmonyApp/entry/src/main/cpp/types/libentry/: Index.d.ts
harmonyApp/entry/src/main/ets/Components/: imageComponent.ets
harmonyApp/entry/src/main/ets/entryability/: EntryAbility.ets
harmonyApp/entry/src/main/ets/pages/: ComposeInterops.ets  ComposeSample.ets  ComposeSelectPhotoPage.ets  Index.ets
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
runscript/: runOhosApp-Mac.sh  runOhosApp-Win.bat
(+81 files in other folders)
